en/v0.6.2/_sources/index.rst.txt
Welcome
=======

What is OpenDP?
---------------

`OpenDP`_ is a community effort to build trustworthy, open source software tools for statistical analysis of sensitive private data using `differential privacy`_.

.. _OpenDP: https://opendp.org
.. _differential privacy: https://opendp.org/about#whatisdifferentialprivacy

Various tools build upon the `OpenDP library`_ and are known (along with the library itself) as the :doc:`/opendp-commons/index`. The OpenDP library and examples of these tools are shown in the diagram below.

.. _OpenDP library: https://github.com/opendp/opendp

|opendp-cake|

.. |opendp-cake| image:: /_static/images/opendp-cake.svg
   :class: img-responsive


Getting Help
------------

If you have questions or feedback regarding OpenDP, please feel free to post on `GitHub Discussions`_.

.. _GitHub Discussions: https://github.com/opendp/opendp/discussions


Navigation
----------

OpenDP documentation is organized into the guides below.
Return home by clicking the OpenDP logo in the header.
Each section in the header bar corresponds to a top-level section below.
When you are in a top-level section, the left panel contains a table of contents for the section,
and the right panel contains a table of contents for the current document.
Documentation for past releases are available in the drop down on the left panel.

.. toctree::
  :glob:
  :titlesonly:
  :maxdepth: 3

  quickstart

.. toctree::
  :glob:
  :titlesonly:
  :maxdepth: 3

  user/index

.. toctree::
  :glob:
  :titlesonly:
  :maxdepth: 3

  examples/index

.. toctree::
  :glob:
  :titlesonly:
  :maxdepth: 4

  api/index

.. toctree::
  :glob:
  :titlesonly:
  :maxdepth: 3

  developer/index
  resources/index
  opendp-commons/index
  contact

This is version |version| of the guides, last built on |today|.

.. |opendp-logo| image:: _static/images/opendp-logo.png
   :class: img-responsive
